User Models done

--- a/trollpy/development.ini
+++ b/trollpy/development.ini
@@ -27,7 +27,7 @@ sqlalchemy.url = sqlite:///%(here)s/trollpy.sqlite
 [server:main]
 use = egg:waitress#main
 host = 127.0.0.1
-port = 6543
+port = 6547
 
 ###
 # logging configuration
@@ -53,7 +53,7 @@ handlers =
 qualname = trollpy
 
 [logger_sqlalchemy]
-level = INFO
+level = WARN
 handlers =
 qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
