--- a/trollpy/requirements.txt
+++ b/trollpy/requirements.txt
@@ -1,15 +1,17 @@
 decorator==4.0.10
 ipython==5.1.0
 ipython-genutils==0.1.0
-Jinja2==2.8.1
+Jinja2==2.9.3
 Mako==1.0.6
 MarkupSafe==0.23
+passlib==1.7.0
 PasteDeploy==1.5.2
 pexpect==4.2.1
 pickleshare==0.7.4
 prompt-toolkit==1.0.9
 psycopg2==2.6.2
 ptyprocess==0.5.1
+pyalexa-skill==0.2.4
 Pygments==2.1.3
 pyramid==1.7.3
 pyramid-debugtoolbar==3.0.5
@@ -17,7 +19,7 @@ pyramid-ipython==0.2
 pyramid-jinja2==2.7
 pyramid-mako==1.0.2
 pyramid-tm==1.1.1
-python-dateutil==2.6.0
+python-chess==0.16.1
 repoze.lru==0.6
 simplegeneric==0.8.1
 six==1.10.0
